[YTA-628] Added important to js-hidden and js-visible helper selectors. This is generally recommended, but required specifically to ensure the Minimise link in the Last Login section is hidden when JavaScript is disabled.

--- a/assets/scss/base/_helpers.scss
+++ b/assets/scss/base/_helpers.scss
@@ -165,11 +165,11 @@
 }
 
 .js .js-hidden {
-  display: none;
+  display: none !important;
 }
 
 .no-js .js-visible {
-  display: none;
+  display: none !important;
 }
 
 %no-bullet {
